add database configurations

--- a/Sell_Online/appsettings.json
+++ b/Sell_Online/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=.;Database=Sell_Online_DB;Username=postgres;Password=0123429320"
+  }
 }
