added categories for post

--- a/Sell_Online/appsettings.json
+++ b/Sell_Online/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=.;Database=Sell_Online_DB;Username=postgres;Password=0123429320"
+    "DefaultConnection": "Host=localhost;Database=Sell_Online_DB;Username=postgres;Password=0123429320"
   }
 }
