Added Auth Functionality

--- a/Sell_Online/appsettings.json
+++ b/Sell_Online/appsettings.json
@@ -9,5 +9,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Database=Sell_Online_DB;Username=postgres;Password=0123429320"
+  },
+  "Jwt": {
+    "Issuer": "SellOnline-API",
+    "Audience": "Android-Client",
+    "Key": "d763be664bbe43e38b341b2471dec5c0"
+  },
+  "AppSettings": {
+    "ImagePath": "D:\\Current_Projects\\Used App\\Sell_Online\\Sell_Online\\Files\\Imgs\\"
   }
 }
