--- a/Sell_Online/Properties/launchSettings.json
+++ b/Sell_Online/Properties/launchSettings.json
@@ -1,17 +1,16 @@
-﻿{
+{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:7283",
+      "applicationUrl": "http://0.0.0.0:8888",
       "sslPort": 44309
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": false,
       "launchUrl": "swagger/index.html",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -19,12 +18,11 @@
     },
     "Sell_Online": {
       "commandName": "Project",
-      "launchBrowser": false,
       "launchUrl": "swagger/index.html",
-      "applicationUrl": "https://0.0.0.0:5001;http://0.0.0.0:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://0.0.0.0:5001;http://0.0.0.0:5000"
     }
   }
 }
