added mailing functionality

--- a/Sell_Online/appsettings.json
+++ b/Sell_Online/appsettings.json
@@ -17,5 +17,13 @@
   },
   "AppSettings": {
     "ImagePath": "D:\\Current_Projects\\Used App\\Sell_Online\\Sell_Online\\Files\\Imgs\\"
+  },
+  "MailSettings": {
+    "Mail": "ahmedmagdy41996@gmail.com",
+    "DisplayName": "Ahmed From Sell Online",
+    "Password": "ailfjkwvamycboni",
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "RedirectURL": "http://192.168.1.2:5000/EmailVerfier/VerifyEmail"
   }
 }
